--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   ],
   "devDependencies": {
     "jest-dom": "^3.1.2",
-    "react-testing-library": "^6.1.2"
+    "@testing-library/react": "^8.0.4",
+    "react-test-renderer": "^16.8.6"
   }
 }
